@@ -1,18 +1,23 @@
 package hu.elte.inf.projects.quizme.service;
 
-import hu.elte.inf.projects.quizme.repository.CategoryRepository;
-import hu.elte.inf.projects.quizme.repository.SubCategoryRepository;
-import hu.elte.inf.projects.quizme.repository.TitleRepository;
-import hu.elte.inf.projects.quizme.repository.TopicRepository;
-import hu.elte.inf.projects.quizme.repository.dto.*;
-import org.springframework.stereotype.Service;
-import org.springframework.util.CollectionUtils;
-
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Stream;
+import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Service;
+import org.springframework.util.CollectionUtils;
+
+import hu.elte.inf.projects.quizme.repository.CategoryRepository;
+import hu.elte.inf.projects.quizme.repository.QuestionRepository;
+import hu.elte.inf.projects.quizme.repository.SubCategoryRepository;
+import hu.elte.inf.projects.quizme.repository.TitleRepository;
+import hu.elte.inf.projects.quizme.repository.TopicRepository;
+import hu.elte.inf.projects.quizme.repository.dto.Category;
+import hu.elte.inf.projects.quizme.repository.dto.Question;
+import hu.elte.inf.projects.quizme.repository.dto.SubCategory;
+import hu.elte.inf.projects.quizme.repository.dto.Title;
+import hu.elte.inf.projects.quizme.repository.dto.Topic;
 
 @Service
 public class QuizService {
@@ -21,51 +26,44 @@ public class QuizService {
     private final SubCategoryRepository subCategoryRepository;
     private final TitleRepository titleRepository;
     private final TopicRepository topicRepository;
+    private final QuestionRepository questionRepository;
 
     public QuizService(CategoryRepository categoryRepository,
             SubCategoryRepository subCategoryRepository,
             TitleRepository titleRepository,
-            TopicRepository topicRepository) {
+            TopicRepository topicRepository,
+            QuestionRepository questionRepository) {
         this.categoryRepository = categoryRepository;
         this.subCategoryRepository = subCategoryRepository;
         this.titleRepository = titleRepository;
         this.topicRepository = topicRepository;
+        this.questionRepository = questionRepository;
     }
 
     public List<String> findAllDistinctCategories() {
-        return categoryRepository.findAllDistinctCategoryNames();
+        return categoryRepository.findAll().stream().map(Category::getName).toList();
     }
 
     public List<String> findDistinctSubCategories(String categoryName) {
-        return subCategoryRepository.findByCategory_Name(categoryName).stream().map(SubCategory::getName).toList();
+        return subCategoryRepository.findByCategoryName(categoryName).stream().map(SubCategory::getName).toList();
     }
 
     public List<Title> findTitlesByCategoryAndSubCategory(String categoryName, String subCategoryName) {
-        return categoryRepository.findByName(categoryName).stream()
-                .findFirst()
-                .map(Category::getSubCategories)
-                .orElseGet(List::of)
-                .stream()
-                .filter(sc -> sc.getName().equals(subCategoryName))
-                .flatMap(sc -> sc.getTitles() != null ? sc.getTitles().stream() : Stream.<Title>empty())
-                .toList();
+        return titleRepository.findByCategoryNameAndSubCategoryName(categoryName, subCategoryName);
     }
 
     public List<Question> findQuestionsByTitle(String titleId) {
-        return titleRepository.findById(titleId)
-                .map(Title::getTopics)
-                .orElseGet(List::of)
-                .stream()
-                .map(Topic::getQuestions)
-                .flatMap(List::stream)
-                .toList();
+        List<String> topicIds = topicRepository.findByTitleName(titleId).stream().map(Topic::getId)
+                .collect(Collectors.toList());
+        return questionRepository.findByTopicIdIn(topicIds);
+    }
+
+    public List<Question> getQuestionsByTopic(String topicId) {
+        return questionRepository.findByTopicId(topicId);
     }
 
     public List<Topic> findTopicsTitleByName(String titleName) {
-        List<Title> titles = titleRepository.findByName(titleName);
-        if (CollectionUtils.isEmpty(titles))
-            return List.of();
-        return titles.get(0).getTopics();
+        return topicRepository.findByTitleName(titleName);
     }
 
     public Title findTitleByName(String titleName) {
@@ -80,15 +78,7 @@ public class QuizService {
     }
 
     public List<Question> findQuestionsByTopicId(String topicId) {
-        Optional<Topic> optTopic = topicRepository.findByTopicId(topicId);
-        // Check for duplicates and warn about them
-        return topicRepository.findByTopicId(topicId)
-                .map(Topic::getQuestions)
-                .orElseGet(List::of);
-    }
-
-    public Topic findTopicById(String topicId) {
-        return topicRepository.findByTopicId(topicId).orElse(null);
+        return questionRepository.findByTopicId(topicId);
     }
 
     public void updateTitleAudioOverview(String titleName, String audioOverviewUrl) throws MalformedURLException {
@@ -99,5 +89,13 @@ public class QuizService {
         Title title = titles.get(0); // Assuming titleName is unique or taking the first one
         title.setAudioOverview(new URL(audioOverviewUrl));
         titleRepository.save(title);
+    }
+
+    public Topic findByTopicName(String topicName) {
+        return topicRepository.findByTopicName(topicName).stream().findFirst().orElse(null);
+    }
+
+    public Topic findTopicById(String testTopicId) {
+        return topicRepository.findByTopicId(testTopicId).orElse(null);
     }
 }
